Cambios de traducción y agrego diferentes luagres

--- a/cronograma/recursos-turisticos/index-es.qmd
+++ b/cronograma/recursos-turisticos/index-es.qmd
@@ -35,6 +35,14 @@ Montevideo tiene una amplia red de servicios de transporte en cada rincón, el b
 - [Información sobre STM aquí](https://montevideo.gub.uy/areas-tematicas/sistema-de-transporte-metropolitano/tarjetas-stm/tarjeta-comun)
 - [Locales de atención STM](https://montevideo.gub.uy/locales-stm)
 
+### Servicios de Taxi:
+
+- [Taxi de Montevideo](https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwjR67GdnuCBAxWrrpUCHd4xBZUQFnoECBwQAQ&url=https%3A%2F%2Fwww.voyentaxi.uy%2F&usg=AOvVaw0kwjd0lwOdB5et59J920b4&opi=89978449)
+- [Uber](https://www.uber.com/global/es/cities/montevideo/)
+- [Cabify](https://cabify.com/en)
+
+Las tres opciones se pueden pagar con tarjeta de débito y crédito, en cada aplicación así como también en el vehiculo.
+
 
 ## Fin de Semana en el Barrio
 
@@ -81,7 +89,7 @@ Montevideo tiene una amplia red de servicios de transporte en cada rincón, el b
 - **MNAV**: Visite el histórico Museo de Artes Visuales. [sitio web de MNAV](https://mnav.gub.uy/) para obtener más información.
 - **MAM**: Visite el Mercado Agricola de Montevideo, donde actualmente puede encontrar diferentes ofertas gastrónimicas [MAM](https://www.mam.com.uy/).
 - **El Rincón del Tango**: Únase al grupo en [Facebook](https://www.facebook.com/groups/ELRINCONDELTANGO.2014/).
-
+- **Castillo Pitamiglio**: Los visitantes podrán recorrer y descubir un laberinto de habitaciones y espacios infinitos, torres y un jardín lleno de símbolos y secretos. El centro cuenta con espacios expositivos, galería de arte, área de talleres y tienda temática. [Sitio web](https://universopittamiglio.com/mvd.php
 ---
 
 ## Hoteles
