--- a/cronograma/recursos-turisticos/index-en.qmd
+++ b/cronograma/recursos-turisticos/index-en.qmd
@@ -35,6 +35,14 @@ Montevideo has an extensive network of transport services in every corner, the c
 - [Information about STM here](https://montevideo.gub.uy/areas-tematicas/sistema-de-transporte-metropolitano/tarjetas-stm/tarjeta-comun)
 - [STM Customer Service Locations](https://montevideo.gub.uy/locales-stm)
 
+### Taxi Services:
+
+- [Taxi de Montevideo](https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwjR67GdnuCBAxWrrpUCHd4xBZUQFnoECBwQAQ&url=https%3A%2F%2Fwww.voyentaxi.uy%2F&usg=AOvVaw0kwjd0lwOdB5et59J920b4&opi=89978449)
+- [Uber](https://www.uber.com/global/es/cities/montevideo/)
+- [Cabify](https://cabify.com/en)
+
+All three options can be paid by debit and credit card, in each application as well as in the vehicle.
+
 
 ## Fin de Semana en el Barrio
 
@@ -43,14 +51,15 @@ Montevideo has an extensive network of transport services in every corner, the c
 - **Musical el FunFun**: Enjoy some music and drinks at [Musical el FunFun](https://maps.app.goo.gl/2ZPDQPhSpannDFVp9).
 
 ### Local Flavors
+
 - **El Tacho**: For those brave enough, get the local experience at [El Tacho](https://maps.app.goo.gl/j4LVKLUYB1fn6x9RA).
-- **Chivito Spots**: Enjoy the best chivito at a rather underground setting. [Location](https://maps.app.goo.gl/rjiPCefxeJeAv3kZ8)
+- **Fergus chivitos**: Enjoy the best chivito at a rather underground setting. [Location](https://maps.app.goo.gl/rjiPCefxeJeAv3kZ8)
 
 ### Mercado del Puerto and Surroundings
 - **Mercado del Puerto**: A touristy but fun market. 
 - **Museo del Carnaval**: Learn about the local Carnival traditions.
-- **Local Food Options**: Check [this spot](https://maps.app.goo.gl/8xYxGRUkGd84i4VAA) for local food.
-- **Fine Dining**: If budget isn't a constraint, check out [this famous place](https://maps.app.goo.gl/WNTR8R5hQKSW6aMk8).
+- **El perro que fuma**: Check [this spot](https://maps.app.goo.gl/8xYxGRUkGd84i4VAA) for local food.
+- **El Palenque**: If budget isn't a constraint, check out [this famous place](https://maps.app.goo.gl/WNTR8R5hQKSW6aMk8).
 
 ---
 
@@ -69,7 +78,7 @@ Montevideo has an extensive network of transport services in every corner, the c
 
 ## Football Attractions
 
-- **Centenario Stadium**: Includes a Football Museum.
+- **Estadio Centenario**: Includes a Football Museum.
 - **Parque Central**: Offers a museum in the Salón de Cristal.
 - **Chorolo al Paso**: Quick bites available at [this location](https://maps.app.goo.gl/KKS2xkcWZgrr85u39).
 
@@ -81,7 +90,7 @@ Montevideo has an extensive network of transport services in every corner, the c
 - **MNAV**: Visit the historic Museum of Visual Arts. [MNAV's website](https://mnav.gub.uy/) for more information.
 - **MAM**: Visit the Agricultural Market of Montevideo, where you can currently find different gastronomic offers [MAM](https://www.mam.com.uy/).
 - **El Rincón del Tango**: Join the group on [Facebook](https://www.facebook.com/groups/ELRINCONDELTANGO.2014/).
-
+- **Castillo Pitamiglio**: Visitors will be able to walk through and discover a labyrinth of infinite rooms and spaces, towers and a garden full of symbols and secrets. The center has exhibition spaces, an art gallery, a workshop area and a themed store. [Website](https://universopittamiglio.com/mvd.php)
 ---
 
 ## Hotels
