Arreglo de faltas de ortografía y traducción de nombres

--- a/cronograma/recursos-turisticos/index-en.qmd
+++ b/cronograma/recursos-turisticos/index-en.qmd
@@ -16,7 +16,7 @@ You can also find more in: <https://www.descubrimontevideo.uy/>
 
 ### Walking
 
-Walking within Montevideo is safe and highly recommended for short distances. Near FCEA, you'll find the famous and beautiful boardwalk, where you can walk from Palermo to Ciudad Vieja, Centro, or Pocitos!
+Walking within Montevideo is safe and highly recommended for short distances. Near FCEA, you'll find the famous and beautiful board walk, where you can walk from Palermo to Ciudad Vieja, Centro, or Pocitos!
 
 ### Bicycle
 
@@ -48,11 +48,11 @@ All three options can be paid by debit and credit card, in each application as w
 
 - **[La Tira Parrillita de Palermo](https://goo.gl/maps/VBEWR1FpD4pzrB29A)**: A must-visit for your barbecue cravings.
 - **Su Bar**: For weekday lunch, consider [Su Bar](https://maps.app.goo.gl/fvFrDkHRinQNj4iW9).
-- **Baar el FunFun**: Enjoy the music and drinks at [Baar el FunFun](https://maps.app.goo.gl/2ZPDQPhSpannDFVp9).
+- **Bar el FunFun**: Enjoy the music and drinks at [Baar el FunFun](https://maps.app.goo.gl/2ZPDQPhSpannDFVp9).
 
 ### Local Flavors
 
-- **El Tacho**: For those brave enough, get the local experience at [El Tacho](https://maps.app.goo.gl/j4LVKLUYB1fn6x9RA).
+- **Bar Tasende**: For those brave enough, get the local experience at [El Tacho](https://maps.app.goo.gl/j4LVKLUYB1fn6x9RA).
 - **Fergus chivitos**: Enjoy the best chivito at a rather underground setting. [Location](https://maps.app.goo.gl/rjiPCefxeJeAv3kZ8)
 
 ### Mercado del Puerto and Surroundings
