Agrego propuesta de taxis y traducción de lugares. By: Fabricio Machado

--- a/cronograma/recursos-turisticos/index-pt.qmd
+++ b/cronograma/recursos-turisticos/index-pt.qmd
@@ -36,15 +36,23 @@ Montevideo tem uma ampla rede de serviços de transporte em cada canto, o bilhet
 - [Locais de atendimento STM](https://montevideo.gub.uy/locales-stm)
 
 
+### Serviços de táxi:
+
+- [Taxi de Montevideo](https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwjR67GdnuCBAxWrrpUCHd4xBZUQFnoECBwQAQ&url=https%3A%2F%2Fwww.voyentaxi.uy%2F&usg=AOvVaw0kwjd0lwOdB5et59J920b4&opi=89978449)
+- [Uber](https://www.uber.com/global/es/cities/montevideo/)
+- [Cabify](https://cabify.com/en)
+
+As três opções podem ser pagas com cartão de débito e crédito, tanto em cada aplicativo quanto no veículo.
+
 ## Final de Semana no Bairro
 
 - **[La Tira Parrillita de Palermo](https://goo.gl/maps/VBEWR1FpD4pzrB29A)**: Uma visita obrigatória para seus desejos de churrasco.
 - **Su Bar**: Para o almoço durante a semana, considere [Su Bar](https://maps.app.goo.gl/fvFrDkHRinQNj4iW9).
-- **Baar el FunFun**: Aproveite a música e as bebidas em [Baar el FunFun](https://maps.app.goo.gl/2ZPDQPhSpannDFVp9).
+- **Bar el FunFun**: Aproveite a música e as bebidas em [Baar el FunFun](https://maps.app.goo.gl/2ZPDQPhSpannDFVp9).
 
 ### Sabores locais
 
-- **El Tacho**: Aproveite uma boa pizza em [El Tacho](https://maps.app.goo.gl/j4LVKLUYB1fn6x9RA).
+- **El Tacho**: Aproveite uma boa pizza em [Bar Tasende](https://maps.app.goo.gl/j4LVKLUYB1fn6x9RA).
 - **Chivitos**: Desfrute do melhor chivito em um lugar diferente. [Localização](https://maps.app.goo.gl/rjiPCefxeJeAv3kZ8)
 
 ### Mercado del Puerto e Arredores
