Corrección de formato en markdown en el nombre de los lugareCorrección de formato en markdown en el nombre de los lugares

--- a/cronograma/recursos-turisticos/index.qmd
+++ b/cronograma/recursos-turisticos/index.qmd
@@ -89,7 +89,7 @@ Las tres opciones se pueden pagar con tarjeta de débito y crédito, en cada apl
 - **MNAV**: Visite el histórico Museo de Artes Visuales. [sitio web de MNAV](https://mnav.gub.uy/) para obtener más información.
 - **MAM**: Visite el Mercado Agrícola de Montevideo, donde actualmente puede encontrar diferentes ofertas gastronómicas [MAM](https://www.mam.com.uy/).
 - **El Rincón del Tango**: Únase al grupo en [Facebook](https://www.facebook.com/groups/ELRINCONDELTANGO.2014/).
-- **Castillo Pitamiglio**: Los visitantes podrán recorrer y descubrir un laberinto de habitaciones y espacios infinitos, torres y un jardín lleno de símbolos y secretos. El centro cuenta con espacios expositivos, galería de arte, área de talleres y tienda temática. [Sitio web](https://universopittamiglio.com/mvd.php
+- **Castillo Pitamiglio**: Los visitantes podrán recorrer y descubrir un laberinto de habitaciones y espacios infinitos, torres y un jardín lleno de símbolos y secretos. El centro cuenta con espacios expositivos, galería de arte, área de talleres y tienda temática. [Sitio web](https://universopittamiglio.com/mvd.php)
 ---
 
 ## Hoteles
