--- a/cronograma/lugar/location.qmd
+++ b/cronograma/lugar/location.qmd
@@ -9,11 +9,24 @@ knitr:
 
 This year the conference will be held at the **Faculty of Economic Sciences and Administration of the University of the Republic (FCEA-UDELAR)**, located at Av. Gonzalo Ramírez 1926, Montevideo, Uruguay.
 
-<center><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13087.072510087819!2d-56.1731886!3d-34.912268!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f81bbacb16b53%3A0x57e62c82d3a0abb4!2sFacultad%20de%20Ciencias%20Econ%C3%B3micas%20y%20de%20Administraci%C3%B3n!5e0!3m2!1sen!2sbr!4v1691626315197!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></center>
+<center>
 
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13087.072510087819!2d-56.1731886!3d-34.912268!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f81bbacb16b53%3A0x57e62c82d3a0abb4!2sFacultad%20de%20Ciencias%20Econ%C3%B3micas%20y%20de%20Administraci%C3%B3n!5e0!3m2!1sen!2sbr!4v1691626315197!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade">
 
-For some activities we will also use spaces from the **sLecture Room of the Social and Artistic Area**, located just across the street from the Faculty.
+</iframe>
 
-<center><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1508.8032045050982!2d-56.17337285131593!3d-34.91254057098105!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f81ba4566283b%3A0x6b0642c9bf97e3d7!2sAulario%20del%20%C3%81rea%20Social%20y%20Art%C3%ADstica%20-%20UdelaR!5e0!3m2!1sen!2sbr!4v1691626485887!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></center>
+</center>
 
+During October 19 and 20, activities will take place on rooms 6, 7, 8, 9 and the Aula Magna.
 
+![](/img/fcea-salones.jpeg){fig-align="center"}
+
+On October 18, tutorials will be held on the **Lectures Room of the Social and Artistic Area**, located just across the street from the Faculty.
+
+<center>
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1508.8032045050982!2d-56.17337285131593!3d-34.91254057098105!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f81ba4566283b%3A0x6b0642c9bf97e3d7!2sAulario%20del%20%C3%81rea%20Social%20y%20Art%C3%ADstica%20-%20UdelaR!5e0!3m2!1sen!2sbr!4v1691626485887!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+
+</iframe>
+
+</center>
