--- a/cronograma/lugar/lugar-pt.qmd
+++ b/cronograma/lugar/lugar-pt.qmd
@@ -7,13 +7,26 @@ knitr:
     warning: false
 ---
 
-Neste ano, a conferência será realizada na  **Faculdade de Ciências Econômicas e de Administração da Universidade da República (FCEA-UDELAR)**, localizada na en Av. Gonzalo Ramírez 1926, Montevidéu, Uruguai.
+Neste ano, a conferência será realizada na **Faculdade de Ciências Econômicas e de Administração da Universidade da República (FCEA-UDELAR)**, localizada na en Av. Gonzalo Ramírez 1926, Montevidéu, Uruguai.
 
-<center><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13087.072510087819!2d-56.1731886!3d-34.912268!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f81bbacb16b53%3A0x57e62c82d3a0abb4!2sFacultad%20de%20Ciencias%20Econ%C3%B3micas%20y%20de%20Administraci%C3%B3n!5e0!3m2!1sen!2sbr!4v1691626315197!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></center>
+<center>
 
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13087.072510087819!2d-56.1731886!3d-34.912268!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f81bbacb16b53%3A0x57e62c82d3a0abb4!2sFacultad%20de%20Ciencias%20Econ%C3%B3micas%20y%20de%20Administraci%C3%B3n!5e0!3m2!1sen!2sbr!4v1691626315197!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+
+</iframe>
+
+</center>
+
+Durante os dias 19 e 20 de outubro as atividades decorrerão na Aula Magna e nas salas 6, 7, 8 e 9.
+
+![](/img/fcea-salones.jpeg){fig-align="center"}
 
 Para algumas atividades também utilizaremos espaços da **Sala de Aulas da Área Social e Artística**, localizada em frente à Faculdade.
 
-<center><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1508.8032045050982!2d-56.17337285131593!3d-34.91254057098105!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f81ba4566283b%3A0x6b0642c9bf97e3d7!2sAulario%20del%20%C3%81rea%20Social%20y%20Art%C3%ADstica%20-%20UdelaR!5e0!3m2!1sen!2sbr!4v1691626485887!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></center>
+<center>
 
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1508.8032045050982!2d-56.17337285131593!3d-34.91254057098105!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f81ba4566283b%3A0x6b0642c9bf97e3d7!2sAulario%20del%20%C3%81rea%20Social%20y%20Art%C3%ADstica%20-%20UdelaR!5e0!3m2!1sen!2sbr!4v1691626485887!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade">
 
+</iframe>
+
+</center>
